--- a/home.html
+++ b/home.html
@@ -3,6 +3,9 @@
 <title>St John's preschool & after school</title>
 </head>
 <body>
-
+    
 </body>
+<footer>
+    <p>This is footer</p>
+</footer>
 </html>
